Add calc record and use hostname as prefix

--- a/ioc/docker-compose.yml
+++ b/ioc/docker-compose.yml
@@ -10,3 +10,6 @@ services:
       - 5064:5064
       - 5064:5064/udp
       - 5065:5065
+    command: ./build-and-run
+    tty: true
+    working_dir: /ioc/iocBoot/iocToto
