--- a/ioc/docker-compose.yml
+++ b/ioc/docker-compose.yml
@@ -6,10 +6,27 @@ services:
     build: .
     volumes:
       - ./src:/ioc
+    command: ./build-and-run
+    tty: true
+    working_dir: /ioc/iocBoot/iocToto
+    networks:
+      - epics
+
+  gateway:
+    image: dmscid/epics-gateway
+    command: -cip 172.111.255.255
     ports:
       - 5064:5064
       - 5064:5064/udp
       - 5065:5065
-    command: ./build-and-run
-    tty: true
-    working_dir: /ioc/iocBoot/iocToto
+    networks:
+      - epics
+
+networks:
+
+  epics:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 172.111.0.0/16
+          gateway: 172.111.0.1
