Make RAND PV update at 1Hz

--- a/ioc/Dockerfile
+++ b/ioc/Dockerfile
@@ -1,10 +1,9 @@
 FROM australiansynchrotron/epics:centos7
 WORKDIR /ioc
-RUN adduser ics && chown ics: /ioc
+COPY src /ioc
+RUN adduser ics && chown -R ics: /ioc
 USER ics
 ENV USER ics
-LABEL pyepics-workshop-image-type="ioc"
-COPY src /ioc
-RUN make
+RUN make clean && make
 WORKDIR /ioc/iocBoot/iocToto
 ENTRYPOINT ["./st.cmd"]
