--- a/ioc-dashboard/package.json
+++ b/ioc-dashboard/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "pushstate-server": "^2.1.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-router": "^3.0.0"
