--- a/ioc-dashboard/package.json
+++ b/ioc-dashboard/package.json
@@ -7,10 +7,12 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "material-ui": "^0.16.5",
     "pushstate-server": "^2.1.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
-    "react-router": "^3.0.0"
+    "react-router": "^3.0.0",
+    "react-tap-event-plugin": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
