--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - 8080:8080
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+    restart: always
 
   ioc-relay:
     build: ioc-relay
@@ -20,11 +21,13 @@ services:
       - 5678:5678
     environment:
       - EPICS_CA_ADDR_LIST=gateway
+    restart: always
 
   ioc-dashboard:
     build: ioc-dashboard
     ports:
       - 9000:9000
+    restart: always
 
   gateway:
     image: dmscid/epics-gateway
@@ -33,6 +36,7 @@ services:
       - 5064:5064
       - 5064:5064/udp
       - 5065:5065
+    restart: always
 
 networks:
 
