Run epics gateway with no-cache option
This is to fix a bug where a caput to a setpoint would appear as if the
request hadn't been processed.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
 
   gateway:
     image: dmscid/epics-gateway
-    command: -cip 172.111.255.255
+    command: -cip 172.111.255.255 -no_cache
     ports:
       - 5064:5064
       - 5064:5064/udp
